clusters/dev/apps/istio/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
