clusters/dev/apps/istio/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: istio-ingress
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-options
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${cluster_subdomain}"
      allowedRoutes:
        namespaces:
          from: All
